welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:5: error: '<-' expected but ')' found.
	for(i<0 to 4)
                    ^PictureMono2:12: error: illegal start of simple expression
}
^PictureMono2:13: error: '<-' expected but ')' found.
for(k<0 to 9)
            ^PictureMono2:19: error: illegal start of simple expression
}
^