welcome.lessons.welcome.methods.picture.PictureMono2.scala.code
var i=0
var k=0
def faireMotif(){
	for(i<0 to 4)
	{
		avance()
		leveBrosse()
		baisseBrosse()
	}
	gauche()
}
for(k<0 to 9)
{
	faireMotif()
}
